test/sema/inference/type_inference_condition_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number
}

fn main(): void { 
  let s;

  if s {}

  // CHECK: [[# @LINE + 1 ]]:9: error: expected to assign 'number' but received 'S' instead
  s = S { x: 1 };
}

// CHECK-NOT: {{.*error.*}}
